--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,29 +3,23 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ranger"
+name = "allan_variance"
 version = "0.1.0"
 authors = [
   { name="kwan3217", email="kwan3217@gmail.com" },
 ]
-description = "Ranger mission reconstruction"
-readme = "README.md"
-requires-python = ">=3.10"
+description = "Allan variance video"
+readme = "readme.md"
+requires-python = ">=3.11"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: BSD License",
     "Operating System :: OS Independent",
 ]
 dependencies=[
-    "scipy",
-    "spiceypy",
-    "matplotlib",
-    "pytest",
     "kwanmath @ git+ssh://git@github.com/kwan3217/kwanmath.git",
-    "bmw @ git+ssh://git@github.com/kwan3217/bmw.git",
-    "kwanspice @ git+ssh://git@github.com/kwan3217/kwanspice.git"
 ]
 
 [project.urls]
-Homepage = "https://github.com/kwan3217/Ranger/"
-Issues = "https://github.com/kwan3217/Ranger/issues"
+Homepage = "https://github.com/kwan3217/allan_variance/"
+Issues = "https://github.com/kwan3217/allan_variance/issues"
